--- a/Style.css
+++ b/Style.css
@@ -19,7 +19,7 @@ body {
     width: 350px;
     height: 150x;
     border-radius: 30px;
-    margin-right: -50%;
+    margin-right: -40%;
 }
 
 .box2 {
@@ -27,9 +27,7 @@ body {
     text-align: right;
     border: 5px solid red;
     background-color: black;
-    padding: 15px;
-    padding-bottom: 0px;
-    padding-right: 20px;
+    padding: 15px 15px 0px 0px;
     width: 350px;
     height: 60px;
     border-radius: 40px;
