--- a/Style.css
+++ b/Style.css
@@ -11,38 +11,32 @@ body {
     justify-content: space-between;
 }
 
-.box1 {
+.box {
     color: aliceblue;
+    font-style: italic;
     border: 5px solid red;
     background-color: black;
     padding: 15px;
+    border-radius: 30px;
+}
+.box1 {
     width: 350px;
     height: 150x;
-    border-radius: 30px;
     margin-right: -50%;
 }
 
 .box2 {
-    color: aliceblue;
     text-align: right;
-    border: 5px solid red;
-    background-color: black;
     padding: 15px 15px 0px 0px;
     width: 350px;
     height: 60px;
-    border-radius: 40px;
     margin-top: 20px;
 }
 
 .box3 {
-    color: aliceblue;
     text-align: center;
-    border: 5px solid red;
-    background-color: black;
-    padding: 15px;
     width: 350px;
     height: 150x;
-    border-radius: 30px;
 }
 
 .layout-2 {
