--- a/Style.css
+++ b/Style.css
@@ -44,7 +44,7 @@ body {
     margin-top: 50px;
 }
 
-.left {
+.circle {
     border: 5px solid grey;
     border-radius: 50%;
     background-color: rgb(68, 169, 159);
@@ -57,7 +57,6 @@ body {
     text-decoration: underline;
     margin-top: 200px;
     margin-left: 150px;
-
 }
 
 .right {
